--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 @import "~bootstrap/scss/bootstrap";
 @import "./assets/scss/styles.scss";
 
-#content {
+#main {
 	background-color: $primary-background-color;
 }
 
